Resume JSON updates and additions

--- a/resume.html
+++ b/resume.html
@@ -100,34 +100,28 @@
           <p>SUMMARY TODO</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Greenfield single page web application project.</p>
           <p>Plan out, develop and deploy an open source free to use ridesharing app.</p>
           <p>Emphasis on solid documentation and repeatable build proccesses with CI and CD.</p>
-          <br> 
+          <br>
+
+          <i><small>Action</small></i>
           <p>Devised a microservice architecture centered on Docker (multiple environments from development to production).</p>
-
           <p>Develop backend HTTP RESTful Web API with NodeJS, MongoDB and Couchbase.</p>
-
           <p>SPA frontend programing AngularJS and Material Design (Javascript, HTML, CSS).</p>
-
           <p>Frontend Javascript build system with GulpJS, CI with travis and Jenkins.</p>
-
           <p>Implement VPC environments with Amazon Web Services.</p>
-
           <p>Developed configuration management systems with Chef Solo and Chef Server.</p>
-
           <p>Implement web operations monitoring systems (Prometheus, ELK).</p>
-
           <p>Implement frontend instrumentation with Google Analytics.</p>
-
           <p>Setup client support systems.</p>
-          <br> 
+          <br>
+
+          <i><small>Result</small></i>
           <p>An MVP for the application specs produced and deployed on time and within budget.</p>
-
           <p>Leveraged open source projects all the way from system OS, config management, backend and frontend to keep operations expenses to an absolute minimum.</p>
-
           <p>Open source contributions produced from the project for Oauth, application logging and AMQP RPC messaging.</p>
-
           <p>Communtiy help blog posts for Docker security and Elasticsearch evolved from the project.</p>
 
 
@@ -147,32 +141,28 @@
           <p>Move a web app cluster of http servers, proxies and databases, high traffic streaming media web application running on bare metal to a multiple staged environment mix of Virtual machines and bare metal servers.</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Plan out a build and deploy system centered around detailed documentation and repeatable build processes.</p>
           <p>Devised and implement a configuration management system.</p>
           <p>Create a Local Developer Virtual Machine setup for programmers and design team.</p>
           <p>Create a repeatable build staging environment on Virtual machines at digitalocean.com.</p>
           <p>Configuration management for all environments including bare metal hardware.</p>
-          <br> 
+          <br>
+
+          <i><small>Action</small></i>
           <p>Web Development with PHP, Python, Javascript, HTML, CSS, PHP, PosgtreSQL and Couchbase.</p>
-
           <p>Devops/Configuration management with Vagrant/Virtualbox, Chef Solo and Chef Server.</p>
-
           <p>High availability systems with Varnish Cache, Nginx and clusters of Pgsql and Couchbase.</p>
-
           <p>Advanced network security process with Iptables, SSH tunneling and port knocking.</p>
-
           <p>Web operations with Logstash, Elasticsearch, Graphite/StatsD, Consul.</p>
-          <br> 
+          <br>
+
+          <i><small>Result</small></i>
           <p>Reduced operational expenses by moving the web cluster to more affordable and higher quality hosting hardware.</p>
-
           <p>Zero extra investment required for software services or licensing.</p>
-
           <p>Successfully transitioned a single stage web app cluster into a multi staged developer workflow.</p>
-
           <p>Implemented repeatable build systems with Open source technology.</p>
-
           <p>Clearly detailed and documented deployment and backup systems so the stakeholders have a better grip of day to day activity.</p>
-
           <p>Reduced technical debt - the application owners now no longer have a black box and have confidence they can quickly recover from data or systems breakdown.</p>
 
 
@@ -191,26 +181,23 @@
           <p>Front-End and back-End web application programming plus Linux systems administration for a suite of online Nutraceutical stores.</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Tasked with maintenance and bug fixing for a pre-existing affiliate sales program and WordPress sites.</p>
-          <br> 
+          <br>
+
+          <i><small>Action</small></i>
           <p>Orientated myself on how the systems integrate (various scheduled tasks for billing, web hooks, report generation).</p>
-
           <p>Implement price point updates, template system updates that integrate with a custom USPS product delivery service.</p>
-
           <p>Fix intermitent 3rd party payment processors bugs and issues.</p>
-
           <p>Fix various intermitent custom USPS shipping issues.</p>
-
           <p>General Linux systems administration such as system updates and backups.</p>
-
           <p>Implement a unified logging system with loggly.com</p>
-
           <p>Sales data mining and reports production.</p>
-          <br> 
-          <p>Continued smooth operation and sales for the web application stakeholders.</p>
+          <br>
 
+          <i><small>Result</small></i>
+          <p>Continued smooth operation, online sales and rebilling for the web application stakeholders.</p>
           <p>Improved documentation.</p>
-
           <p>Implemented a browser testing suite with WebDriver and Selenium.</p>
 
 
@@ -226,16 +213,26 @@
 
           <p>California, United States (remote)</p>
 
-          <p>SUMMARY TODO</p>
+          <p>SSC Groupt LLC is an internet entertainment and publishing company specializing in online entertainment services, publishing, branding, and traffic generation.</p>
           <br>
 
-          <p>Web Development with PHP, Node.js, Ruby on Rails, Javascript, HTML and CSS.</p>
-          <p>Database development with Mysql, PostgreSQL and MongoDB.</p>
-          <p>REST API development, Templating systems development, bug fixes.</p>
-          <p>Pre-existing affiliate program maintenance.</p>
-          <p>Integration with 3rd party payment processors.</p>
+          <i><small>Problem</small></i>
+          <p>Join and contribute to an existing Web Development team of Rails developers, PHP developers and HTML/CSS designers.</p>
+          <p>Develop and maintain a suite of streaming video and traffic generation web and mobile sites.</p>
+          <p>Maintenance of a pre-existing PHP based affiliate program and integration with third party payment processors.</p>
+          <br>
+
+          <i><small>Action</small></i>
+          <p>Implemented code fixes, updates and addtions to existing PHP, Node.js, Ruby on Rails, Javascript, HTML code.</p>
+          <p>Integrated application code with Mysql, PostgreSQL and MongoDB databases.</p>
+          <p>Developed a PHP REST API, PHP Smarty templating updates and bug fixes.</p>
           <p>Linux systems admin, Virtual Machine setup/admin/integration.</p>
-          <br>           <br> 
+          <br>
+
+          <i><small>Result</small></i>
+          <p>Continued smooth operation and online sales for the web application stakeholders.</p>
+          <p>Improved documentation.</p>
+
 
         </div>
       </div>
@@ -252,8 +249,17 @@
           <p>SUMMARY TODO</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Call center IT operations including network security, VOIP inbound and outbound ViciDial systems.</p>
-          <br>           <br> 
+          <br>
+
+          <i><small>Action</small></i>
+          <p>TODO</p>
+          <br>
+
+          <i><small>Result</small></i>
+          <p>TODO</p>
+
 
         </div>
       </div>
@@ -270,12 +276,21 @@
           <p>SUMMARY TODO</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Founding Partner of BPO outsourcing company.</p>
           <p>Call center IT operations including network security, VOIP inbound and outbound ViciDial systems.</p>
           <p>Advanced networking with Linux firewall and routing.</p>
           <p>Advanced VOIP setup, configuration and admin.</p>
           <p>Microsoft windows client workstation cluster setup and admin.</p>
-          <br>           <br> 
+          <br>
+
+          <i><small>Action</small></i>
+          <p>TODO</p>
+          <br>
+
+          <i><small>Result</small></i>
+          <p>TODO</p>
+
 
         </div>
       </div>
@@ -292,6 +307,7 @@
           <p>SUMMARY TODO</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Senior Web Developer and Systems Administrator.</p>
           <p>Development with PHP, Python, Django, Javascript, HTML and CSS.</p>
           <p>Database development with PostgreSQL including HA primary/secondary.</p>
@@ -301,7 +317,15 @@
           <p>Front end build systems and deployment process development</p>
           <p>Linux systems admin, Virtual Machine setup/admin/integration.</p>
           <p>Distributed development team with DVCS (git).</p>
-          <br>           <br> 
+          <br>
+
+          <i><small>Action</small></i>
+          <p>TODO</p>
+          <br>
+
+          <i><small>Result</small></i>
+          <p>TODO</p>
+
 
         </div>
       </div>
@@ -318,6 +342,7 @@
           <p>SUMMARY TODO</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Senior Web Developer and Systems Administrator.</p>
           <p>Development with PHP, Javascript, HTML and CSS.</p>
           <p>Database development with Mysql and PostgreSQL including HA primary/secondary.</p>
@@ -325,7 +350,15 @@
           <p>Content management systems for affiliates.</p>
           <p>Integration with 3rd party payment processors.</p>
           <p>Linux systems administration and Database administration.</p>
-          <br>           <br> 
+          <br>
+
+          <i><small>Action</small></i>
+          <p>TODO</p>
+          <br>
+
+          <i><small>Result</small></i>
+          <p>TODO</p>
+
 
         </div>
       </div>
@@ -342,13 +375,22 @@
           <p>SUMMARY TODO</p>
           <br>
 
+          <i><small>Problem</small></i>
           <p>Senior Web Developer and Systems Administrator.</p>
           <p>Development with Coldfusion, PHP, Javascript, HTML and CSS.</p>
           <p>Database development with PostgreSQL.</p>
           <p>Content management systems, domain name registration web app.</p>
           <p>Integration with 3rd party payment processors.</p>
           <p>Linux systems administration and Database administration.</p>
-          <br>           <br> 
+          <br>
+
+          <i><small>Action</small></i>
+          <p>TODO</p>
+          <br>
+
+          <i><small>Result</small></i>
+          <p>TODO</p>
+
 
         </div>
       </div>
@@ -372,7 +414,7 @@
         <li>Web Developer, Web Operations, <a href="http://sscgroupllc.com" target="_blank">SSC Group LLC</a></li>
         <li>2012-12-01 - 2013-08-01</li>
         <li>California, United States (remote)</li>
-        <li>SUMMARY TODO</li>
+        <li>SSC Groupt LLC is an internet entertainment and publishing company specializing in online entertainment services, publishing, branding, and traffic generation.</li>
         
         <li>IT Operations, <a href="http://kineticbusinesssolutions.com" target="_blank">Kinetic Business Solutions</a></li>
         <li>2012-04-01 - 2012-08-01</li>
