--- a/resume.tpl.html
+++ b/resume.tpl.html
@@ -95,13 +95,20 @@
           {{/summary}}
           <br>
 
+          <i><small>Problem</small></i>
           {{#par.problem}}
           <p>{{.}}</p>
           {{/par.problem}}
-          <br> {{#par.action}}
+          <br>
+
+          <i><small>Action</small></i>
+          {{#par.action}}
           <p>{{.}}</p>
           {{/par.action}}
-          <br> {{#par.result}}
+          <br>
+
+          <i><small>Result</small></i>
+          {{#par.result}}
           <p>{{.}}</p>
           {{/par.result}}
 
