JSON data updates, minor template layout changes

--- a/resume.tpl.html
+++ b/resume.tpl.html
@@ -86,9 +86,7 @@
           <h3 class="panel-title">{{position}}, <a href="{{url}}" target="_blank">{{employer}}</a></h3>
         </div>
         <div class="panel-body">
-          <p>{{employmentPeriod}} <i>{{employmentPeriodHumanize}}</i></p>
-
-          <p>{{location}}</p>
+          <p>{{employmentPeriod}} <i>{{employmentPeriodHumanize}}</i> - {{location}}</p>
 
           {{#summary}}
           <p>{{.}}</p>
