JSON data updates, minor template layout changes

--- a/resume.tpl.html
+++ b/resume.tpl.html
@@ -118,15 +118,15 @@
       </div>
       {{/employment.history}}
 
-      <!--<ol>
-        {{#employment.history}}
-        <li>{{position}}, <a href="{{url}}" target="_blank">{{employer}}</a></li>
-        <li>{{start}} - {{end}}</li>
-        <li>{{location}}</li>
-        <li>{{summary}}</li>
-        {{#highlights}} * {{.}} {{/highlights}}
-        {{/employment.history}}
-      </ol>-->
+      <h1>Open Source Projects and Modules</h1>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">TODO</h3>
+        </div>
+        <div class="panel-body">
+          TODO
+        </div>
+      </div>
 
       <h1>Skills</h1> {{#skills.sets}}
       <div class="panel panel-default">
@@ -138,6 +138,16 @@
         </div>
       </div>
       {{/skills.sets}}
+
+      <h1>Technical Interests and Tinkerings</h1>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">TODO</h3>
+        </div>
+        <div class="panel-body">
+          TODO
+        </div>
+      </div>
 
       <h1>Education</h1> {{#education.history}}
       <div class="panel panel-default">
