Build resume HTML

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
           <div class="col-md-6"><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbYAAAAJDU0OGViYTg5LWZmYTUtNDNiZS1iYTczLTFhMmVlZTQ1ZTk1Mg.jpg" alt="Rudi Starcevic" class="img-rounded" /></div>
         </div>
         <h3>About</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Driven and highly self-motivated.</p>
+        <p>A fast and eager learner - tech changes quickly.</p>
+        <p>Great communicator &amp; collaborator.</p>
+        <p>Both detail oriented (for implementing &amp; debugging), and big-picture oriented (for architecting).</p>
+        <p>Posses a working knowledge of math, logic, &amp; abstraction.</p>
+        <p>Willing and able to put in some time off the clock to keep skills sharp.</p>
       </div>
 
 
