JSON data updates, build resume

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <p>A fast and eager learner - tech changes quickly.</p>
 
-        <p>Great communicator &amp; collaborator.</p>
+        <p>Great communicator and collaborator, native English speaker.</p>
 
         <p>Both detail oriented (for implementing &amp; debugging), and big-picture oriented (for architecting).</p>
 
