Add personal blog to writings list

--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
           <ul>
             <li><a href="https://www.linkedin.com/pulse/elasticsearch-v2-geolocation-search-made-easy-docker-rudi-starcevic?trkSplashRedir=true&amp;forceNoSplash=true" target="_blank">Elasticsearch v2 Geolocation search made easy with Docker</a> (Technical Tutorial)</li>
             <li><a href="https://github.com/elastic/examples/tree/master/ELK_docker_setup" target="_blank">ELK Docker Setup</a> (Technical Tutorial)</li>
+            <li><a href="https://rudijs.github.io/archive.html" target="_blank">Personal Blog - Web Development, Web Operations, Devops</a> (Technical Tutorials)</li>
           </ul>
         </div>
       </div>
