Build resume html

--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
           <div class="col-md-6"><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbYAAAAJDU0OGViYTg5LWZmYTUtNDNiZS1iYTczLTFhMmVlZTQ1ZTk1Mg.jpg" alt="Rudi Starcevic" class="img-rounded" /></div>
         </div>
         <h3>About</h3> 
+        <p>I&#39;m a Full Stack Web Developer and Devops Engineer with extensive experience in building high quality sites.</p>
+
         <p>Driven and highly self-motivated.</p>
 
         <p>A fast and eager learner - tech changes quickly.</p>
 
         <p>Great communicator and collaborator, native English speaker.</p>
 
-        <p>Both detail oriented (for implementing &amp; debugging), and big-picture oriented (for architecting).</p>
+        <p>Both detail oriented (for implementing and debugging), and big-picture oriented (for architecting).</p>
 
-        <p>Posses a working knowledge of math, logic, &amp; abstraction.</p>
+        <p>Posses a working knowledge of math, logic and abstraction.</p>
 
         <p>Willing and able to put in some time off the clock to keep skills sharp.</p>
       </div>
@@ -586,7 +588,7 @@
           <li><a href="https://www.dropbox.com/s/z14765cgduh42k5/Online_Grammar_Certificate.pdf?dl=0" target="_blank">Teaching English as a Foreign Language: Grammar Awareness</a> - The Open and Distance Learning Quality Council</li>
           <ol>
           </ol>
-          <li><a href="https://www.pluralsight.com/" target="_blank">Plural Sight Courses</a> - Plural Sight</li>
+          <li><a href="https://www.pluralsight.com/" target="_blank">Plural Sight Online Courses</a> - Plural Sight</li>
           <ol>
             <li><a href="http://app.pluralsight.com/courses/yeoman-fundamentals" target="_blank">Yeoman Fundamentals</a></li>
             <li><a href="http://app.pluralsight.com/courses/administering-elasticsearch-cluster" target="_blank">Administering an Elasticsearch Cluster</a></li>
@@ -603,12 +605,17 @@
             <li><a href="https://app.pluralsight.com/library/courses/date-time-fundamentals" target="_blank">Date and Time Fundamentals</a></li>
             <li><a href="https://app.pluralsight.com/library/courses/math-for-programmers/table-of-contents" target="_blank">Math for Programmers</a></li>
           </ol>
-          <li><a href="https://egghead.io" target="_blank">Egg Head Courses</a> - Egg Head</li>
+          <li><a href="https://egghead.io" target="_blank">Egg Head Online Courses</a> - Egg Head</li>
           <ol>
             <li><a href="https://egghead.io/series/angular-and-webpack-for-modular-applications" target="_blank">Angular and Webpack for Modular Applications</a></li>
             <li><a href="https://egghead.io/series/angularjs-authentication-with-jwt" target="_blank">AngularJS Authentication with JWT</a></li>
           </ol>
-          <li><a href="https://www.codeschool.com/users/127856" target="_blank">Code School Courses</a> - Code School</li>
+          <li><a href="http://www.lynda.com" target="_blank">Lynda.com Online Courses</a> - Lynda.com</li>
+          <ol>
+            <li><a href="http://www.lynda.com/Slack-tutorials/Up-Running-Slack/383930-2.html" target="_blank">Up and Running with Slack</a></li>
+            <li><a href="http://www.lynda.com/Business-Skills-tutorials/Agile-Work-Building-Your-Agile-Team/175073-2.html" target="_blank">Agile at Work: Building Your Agile Team</a></li>
+          </ol>
+          <li><a href="https://www.codeschool.com/users/127856" target="_blank">Code School Online Courses</a> - Code School</li>
           <ol>
             <li><a href="https://www.codeschool.com/courses/git-real" target="_blank">Git Real</a></li>
             <li><a href="https://www.codeschool.com/courses/rails-best-practices" target="_blank">Rails Best Practices</a></li>
