Add pluralsight courses

--- a/index.html
+++ b/index.html
@@ -590,6 +590,8 @@
           </ol>
           <li><a href="https://www.pluralsight.com/" target="_blank">Plural Sight Online Courses</a> - Plural Sight</li>
           <ol>
+            <li><a href="http://app.pluralsight.com/courses/javascript-practical-design-patterns" target="_blank">Practical Design Patterns in JavaScript</a></li>
+            <li><a href="http://app.pluralsight.com/courses/elasticsearch-for-dotnet-developers" target="_blank">Getting Started With Elasticsearch for .NET Developers</a></li>
             <li><a href="http://app.pluralsight.com/courses/yeoman-fundamentals" target="_blank">Yeoman Fundamentals</a></li>
             <li><a href="http://app.pluralsight.com/courses/administering-elasticsearch-cluster" target="_blank">Administering an Elasticsearch Cluster</a></li>
             <li><a href="http://app.pluralsight.com/courses/aws-vpc-operations" target="_blank">AWS VPC Operations</a></li>
