--- a/index.html
+++ b/index.html
@@ -103,15 +103,57 @@
       <h1>Work Experience</h1> 
       <div class="panel panel-default">
         <div class="panel-heading">
+          <h3 class="panel-title"><b>Tech Lead, Senior Web Developer, DevOps, Web Operations</b></h3>
+        </div>
+        <div class="panel-body">
+          <p><a href="https://www.axa-groupsolutions.com/" target="_blank">AXA Group Solutions</a>
+            <p>April, 2016 to present <i></i> - Hong Kong</p>
+
+            <p class="summary">AXA Group Solutions is an AXA Group company which serves most of AXA’s entities.</p>
+            <br>
+
+            <i><small><b>Problem</b></small></i> 
+            <p>Create a core Agile team to develop technical solutions for AXA Asia region entities.</p>
+
+            <p>Develop HTTP Rest APIs required Asian regional systems integration.</p>
+
+            <p>Focus on Agile methodologies with disciplined work process, accountability, visibility and product deliverys.</p>
+
+            <p>Liaise and work with other teams, stakeholders, Actuaries, and eCommerce partners.</p>
+            <br>
+
+            <i><small><b>Action</b></small></i> 
+            <p>Implement Restful HTTP APIs with Node.JS using Strongloop API technology.</p>
+
+            <p>Develop secure productive local containerized developer work environments enabling rapid onboarding.</p>
+
+            <p>Establish Continous Ingration and Delivery piplelines that incorporate local pre-release penetration testing.</p>
+
+            <p>Docker build process deployed into a regional data center running on the OpenShift platform for container orchestration.</p>
+
+            <p>Develop Site Reliability Playbooks for application maintenance and support.</p>
+            <br>
+
+            <i><small><b>Result</b></small></i> 
+            <p>Successfully delivered phase one the digital transformation process for regional identity management and access.</p>
+
+            <p>Set an example of proper devops and engineering practices, workflow and delivery for other teams to learn from and also use.</p>
+
+            <p>Mentored junior developers helping to upskill and improve their skills and critical thinking.</p>
+
+        </div>
+      </div>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">
           <h3 class="panel-title"><b>Web Developer, DevOps, Web Operations</b></h3>
         </div>
         <div class="panel-body">
           <p><a href="https://ridesharemarket.com" target="_blank">Ride Share Market</a>
-            <p>November, 2014 to present <i></i> - Bangkok, Thailand (remote)</p>
+            <p>November, 2014 to June, 2016 <i>( 1 year , 6 months )</i> - Bangkok, Thailand (remote)</p>
 
             <p class="summary">Ride Share Market is free to use ride sharing web and mobile site.</p>
-            <p class="summary">Currently in the MVP stage (minimum viable product)</p>
-            <p class="summary">Development is on going.</p>
+            <p class="summary">The site is currently offline, unable to gain enough traction the stakeholders have ceased the project.</p>
             <br>
 
             <i><small><b>Problem</b></small></i> 
