--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             <br>
 
             <i><small><b>Problem</b></small></i> 
-            <p>Create a core Agile team to develop technical solutions for AXA Asia region entities.</p>
+            <p>Create a core Agile team to develop technical solutions for AXA&#39;s Asia region entities.</p>
 
-            <p>Develop HTTP Rest APIs required Asian regional systems integration.</p>
+            <p>Develop HTTP RESTful APIs required for Asian regional systems integration.</p>
 
-            <p>Focus on Agile methodologies with disciplined work process, accountability, visibility and product deliverys.</p>
+            <p>Focus on Agile methodologies with disciplined work process, accountability, visibility and product deliveries.</p>
 
             <p>Liaise and work with other teams, stakeholders, Actuaries, and eCommerce partners.</p>
             <br>
@@ -127,17 +127,19 @@
 
             <p>Develop secure productive local containerized developer work environments enabling rapid onboarding.</p>
 
-            <p>Establish Continous Ingration and Delivery piplelines that incorporate local pre-release penetration testing.</p>
+            <p>Establish Continuous Integration and Continuous Delivery piplelines that incorporate local pre-release penetration testing and code analysis.</p>
 
-            <p>Docker build process deployed into a regional data center running on the OpenShift platform for container orchestration.</p>
+            <p>Focus on always-on infrastructure, ensuring strong security, flexible automation and service resilience.</p>
 
-            <p>Develop Site Reliability Playbooks for application maintenance and support.</p>
+            <p>Establish Docker build process deploying into a regional data center running the OpenShift platform for container orchestration.</p>
+
+            <p>Create Site Reliability Playbooks for application maintenance and support.</p>
             <br>
 
             <i><small><b>Result</b></small></i> 
             <p>Successfully delivered phase one the digital transformation process for regional identity management and access.</p>
 
-            <p>Set an example of proper devops and engineering practices, workflow and delivery for other teams to learn from and also use.</p>
+            <p>Set an example of solid DevOps and Engineering best practices, workflow and delivery for other teams to learn from and also use.</p>
 
             <p>Mentored junior developers helping to upskill and improve their skills and critical thinking.</p>
 
