--- a/index.html
+++ b/index.html
@@ -103,11 +103,62 @@
       <h1>Work Experience</h1> 
       <div class="panel panel-default">
         <div class="panel-heading">
+          <h3 class="panel-title"><b>Digital Architect</b></h3>
+        </div>
+        <div class="panel-body">
+          <p><a href="https://www.viseo.com/en/apac" target="_blank">Viseo</a>
+            <p>December, 2018 to July, 2019 <i>( 6 months )</i> - Hong Kong</p>
+
+            <p class="summary">Viseo is a digital solutions company providing consulting to operations.</p>
+            <br>
+
+            <i><small><b>Problem</b></small></i> 
+            <p>Lead the Digital Innovation Practice in HKG</p>
+
+            <p>Lead and Manage the Digital Squad (team of 2 to 5 Developers)</p>
+
+            <p>Provide consulting advice to clients as requested.</p>
+
+            <p>Support Presales activities. Eg do demos, ppts, POCs, ideas, etc.</p>
+
+            <p>Support sales putting proposals together.</p>
+
+            <p>If we are selected to do a project, help put a team together to deliver (ie. Nearshoring to PH, or hire temp developers in HKG or leverage HKG digital squad).</p>
+
+            <p>Anything regarding Technical Hires – interviews and vetting candidates.</p>
+
+            <p>Push BlockChain &amp; NLP in Chatbots – eg. Drive and/or participate at Though Leadership Events, do internal and client POCs.</p>
+
+            <p>Mange an internal Product Backlog of innovation that can be showcased.</p>
+
+            <p>Support Partners&#39; solutions when required – Docker, Salesforce.com primarily</p>
+
+            <p>Supporting colleagues in SCO and Salesforce.com with high level solutions architecture when integrations are required.</p>
+
+            <p>Staying abreast with latest technologies.</p>
+
+            <p>Mentor and prepare training to Digital Squad staff.</p>
+
+            <p>Facilitate and participate in Design Thinking workshops.</p>
+            <br>
+
+            <i><small><b>Action</b></small></i> 
+            <p>TODO</p>
+            <br>
+
+            <i><small><b>Result</b></small></i> 
+            <p>TODO</p>
+
+        </div>
+      </div>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">
           <h3 class="panel-title"><b>Tech Lead, Senior Web Developer, DevOps, Web Operations</b></h3>
         </div>
         <div class="panel-body">
           <p><a href="https://www.axa-groupsolutions.com/" target="_blank">AXA Group Solutions</a>
-            <p>April, 2016 to present <i></i> - Hong Kong</p>
+            <p>April, 2016 to July, 2017 <i>( 1 year , 2 months )</i> - Hong Kong</p>
 
             <p class="summary">AXA Group Solutions is an AXA Group company which serves most of AXA’s entities.</p>
             <br>
