--- a/resume.tpl.html
+++ b/resume.tpl.html
@@ -1,133 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Resume: Rudi Starcevic</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Resume: Rudi Starcevic</title>
+    <!-- Bootstrap -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
 
-  <!-- Bootstrap -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/css/styles.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+  </head>
 
-<body>
-
-  <div class="container">
-    <div class="row">
-
-      <div class="jumbotron">
-        <div class="row">
-          <div class="col-md-6">
-            <h1>{{name}}</h1>
-            <ul>
-              {{#info.label}}
-              <li>
-                <p>{{.}}</p>
-              </li>
-              {{/info.label}}
-            </ul>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="jumbotron">
+          <div class="row">
+            <div class="col-md-6">
+              <h1>{{name}}</h1>
+              <ul>
+                {{#info.label}}
+                <li>
+                  <p>{{.}}</p>
+                </li>
+                {{/info.label}}
+              </ul>
+            </div>
+            <div class="col-md-6"><img src="{{info.image}}" alt="{{name}}" height="400" class="img-rounded" /></div>
           </div>
-          <div class="col-md-6"><img src="{{info.image}}" alt="{{name}}" class="img-rounded" /></div>
+          <h3>About</h3>
+          {{#info.brief}}
+          <p>{{.}}</p>
+          {{/info.brief}}
         </div>
-        <h3>About</h3> {{#info.brief}}
-        <p>{{.}}</p>
-        {{/info.brief}}
       </div>
-
-
     </div>
-  </div>
 
-  <div class="container">
-    <div class="row">
-
-
-      <div class="col-md-6">
-        <div class="well">
-          <h1>Contact</h1>
-          <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
-          <a href="mailto://{{contact.email}}">{{contact.email}}</a>
-          <br>
-          <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-          <a href="{{contact.website}}">{{contact.website}}</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="well">
+            <h1>Contact</h1>
+            <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
+            <a href="mailto://{{contact.email}}">{{contact.email}}</a>
+            <br />
+            <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+            <a href="{{contact.website}}">{{contact.website}}</a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="well">
-          <h1>Social</h1> {{#social}}
-          <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
-          <a href="{{url}}" target="_blank">{{network}}</a>
-          <br> {{/social}}
+        <div class="col-md-6">
+          <div class="well">
+            <h1>Social</h1>
+            {{#social}}
+            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+            <a href="{{url}}" target="_blank">{{network}}</a>
+            <br />
+            {{/social}}
 
-          <!--{{#languages}}
+            <!--{{#languages}}
           * {{language}}
           {{/languages}}-->
-
+          </div>
         </div>
       </div>
-
     </div>
-  </div>
 
-  <div class="container">
-    <div class="row">
-
-      <h1>Work Experience</h1> {{#employment.history}}
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title"><b>{{position}}</b></h3>
-        </div>
-        <div class="panel-body">
-          <p><a href="{{url}}" target="_blank">{{employer}}</a>
+    <div class="container">
+      <div class="row">
+        <h1>Work Experience</h1>
+        {{#employment.history}}
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><b>{{position}}</b></h3>
+          </div>
+          <div class="panel-body">
+            <p><a href="{{url}}" target="_blank">{{employer}}</a></p>
             <p>{{employmentPeriod}} <i>{{employmentPeriodHumanize}}</i> - {{location}}</p>
 
             {{#summary}}
             <p class="summary">{{.}}</p>
             {{/summary}}
-            <br>
+            <br />
 
-            <i><small><b>Problem</b></small></i> {{#par.problem}}
+            <i
+              ><small><b>Problem</b></small></i
+            >
+            {{#par.problem}}
             <p>{{.}}</p>
             {{/par.problem}}
-            <br>
+            <br />
 
-            <i><small><b>Action</b></small></i> {{#par.action}}
+            <i
+              ><small><b>Action</b></small></i
+            >
+            {{#par.action}}
             <p>{{.}}</p>
             {{/par.action}}
-            <br>
+            <br />
 
-            <i><small><b>Result</b></small></i> {{#par.result}}
+            <i
+              ><small><b>Result</b></small></i
+            >
+            {{#par.result}}
             <p>{{.}}</p>
             {{/par.result}} {{#highlights}}
             <p>{{.}}</p>
             {{/highlights}}
-
+          </div>
         </div>
-      </div>
-      {{/employment.history}}
+        {{/employment.history}}
 
-      <h1>Open Source Projects</h1>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <ul>
-            {{#openSource}} {{#projects}}
-            <li><a href="{{url}}" target="_blank">{{name}}</a> - {{description}}</li>
-            {{/projects}} {{/openSource}}
-          </ul>
+        <h1>Open Source Projects</h1>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <ul>
+              {{#openSource}} {{#projects}}
+              <li><a href="{{url}}" target="_blank">{{name}}</a> - {{description}}</li>
+              {{/projects}} {{/openSource}}
+            </ul>
+          </div>
         </div>
-      </div>
 
-      <!--<h1>Skills</h1> {{#skills.sets}}
+        <!--<h1>Skills</h1> {{#skills.sets}}
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">{{name}} - {{level}}</h3>
@@ -138,7 +140,7 @@
       </div>
       {{/skills.sets}}-->
 
-      <!--<h1>Technical Interests and Tinkerings</h1>
+        <!--<h1>Technical Interests and Tinkerings</h1>
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">TODO</h3>
@@ -148,36 +150,33 @@
         </div>
       </div>-->
 
-      <h1>Writing</h1>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <ul>
-            {{#writing}}
-            <li><a href="{{url}}" target="_blank">{{title}}</a> ({{flavor}})</li>
-            {{/writing}}
-          </ul>
+        <h1>Writing</h1>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <ul>
+              {{#writing}}
+              <li><a href="{{url}}" target="_blank">{{title}}</a> ({{flavor}})</li>
+              {{/writing}}
+            </ul>
+          </div>
+        </div>
+
+        <h1>Education</h1>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <ul>
+              {{#education.history}}
+              <li><a href="{{url}}" target="_blank">{{summary}}</a> - {{institution}}</li>
+              <ol>
+                {{#curriculum}}
+                <li><a href="{{url}}" target="_blank">{{name}}</a></li>
+                {{/curriculum}}
+              </ol>
+              {{/education.history}}
+            </ul>
+          </div>
         </div>
       </div>
-
-      <h1>Education</h1>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <ul>
-          {{#education.history}}
-          <li><a href="{{url}}" target="_blank">{{summary}}</a> - {{institution}}</li>
-          <ol>
-          {{#curriculum}}
-            <li><a href="{{url}}" target="_blank">{{name}}</a></li>
-          {{/curriculum}}
-          </ol>
-          {{/education.history}}
-          </ul>
-        </div>
-      </div>
-
     </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
