--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h1>Work Experience</h1>
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><b>AWS Solutions Architect, Fullstack Web Developer, Web Operations, Business Analyst</b></h3>
+            <h3 class="panel-title"><b>Fullstack Web Developer, AWS Solutions Architect, Devops Engineer, Web Operations, Business Analyst</b></h3>
           </div>
           <div class="panel-body">
             <p><a href="http://grandredlimited.com" target="_blank">Grand Red Consulting</a></p>
@@ -122,7 +122,7 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><b>Digital Architect</b></h3>
+            <h3 class="panel-title"><b>Digital Architect, Full Stack Web Developer, AWS Solutions Architect, Devops Engineer</b></h3>
           </div>
           <div class="panel-body">
             <p><a href="https://www.viseo.com/en/apac" target="_blank">Viseo</a></p>
