--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
             <i
               ><small><b>Problem</b></small></i
             >
-            <p>Lead the Digital Innovation Practice in HKG</p>
+            <p>Lead Viseo&#39;s Digital Innovation Practice in Hong Kong</p>
             <p>Lead and Manage the Digital Squad (team of 2 to 5 Developers)</p>
             <p>Provide consulting advice to clients as requested.</p>
-            <p>Support Presales activities. Eg do demos, ppts, POCs, ideas, etc.</p>
+            <p>Support Presales activities (presentation demos, ppts, POCs, ideas, etc.)</p>
             <p>Support sales putting proposals together.</p>
-            <p>If we are selected to do a project, help put a team together to deliver (ie. Nearshoring to PH, or hire temp developers in HKG or leverage HKG digital squad).</p>
-            <p>Anything regarding Technical Hires – interviews and vetting candidates.</p>
-            <p>Push BlockChain &amp; NLP in Chatbots – eg. Drive and/or participate at Though Leadership Events, do internal and client POCs.</p>
-            <p>Mange an internal Product Backlog of innovation that can be showcased.</p>
-            <p>Support Partners&#39; solutions when required – Docker, Salesforce.com primarily</p>
+            <p>For new client projects help put a team together to deliver (ie. Nearshoring to Philippines, or hire developers in Hong Kong or leverage Hong Kong digital squad).</p>
+            <p>Anything regarding Technical Hires - interviews and vetting candidates.</p>
+            <p>Push BlockChain &amp; NLP in Chatbots - eg. Drive and/or participate at Thought Leadership Events, do internal and client POCs.</p>
+            <p>Manage an internal Product Backlog of innovation that can be showcased.</p>
+            <p>Support Partners&#39; solutions when required - Docker Inc., Salesforce.com primarily</p>
             <p>Supporting colleagues in SCO and Salesforce.com with high level solutions architecture when integrations are required.</p>
             <p>Staying abreast with latest technologies.</p>
             <p>Mentor and prepare training to Digital Squad staff.</p>
@@ -153,13 +153,20 @@
             <i
               ><small><b>Action</b></small></i
             >
-            <p>TODO</p>
+            <p>Establish a new Organizational level Git code repository for the regional Innovation Team</p>
+            <p>Built an open source containerized CI/CD web application for use in corporate demostrations and public presentations</p>
+            <p>Do CI/CD presentations and demonstrations for clients and plubic gatherings (Cloud Expo Asia Hong Kong, Docker User Groups Hong Kong)</p>
+            <p>Participated in the design and development of POC serverless single page app using ReactJS and AWS Lambda with the new Innovation squad for a client RFC</p>
+            <p>Consult for, architect and create a POC serverless asynchonous event driven application on AWS for large scale metrics ingestion and post processing</p>
             <br />
 
             <i
               ><small><b>Result</b></small></i
             >
-            <p>TODO</p>
+            <p>Expanded Viseo&#39;s presence, footprint and influence in Hong Kong</p>
+            <p>Increased new client lead generation</p>
+            <p>Integral in bringing in and creating new clients for Viseo Asia</p>
+            <p>Successful RFC and POC projects leading directly to new client accounts for Viseo</p>
           </div>
         </div>
         <div class="panel panel-default">
