--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
             <i
               ><small><b>Problem</b></small></i
             >
-            <p>TODO</p>
+            <p>A rapidly growning International BPO company needing a Management Information System (MIS) for help with decision-making.</p>
+            <p>The MIS system requirements also are to aide the coordination, control, analysis, and visualization of the organizations Operations and HR data.</p>
+            <p>Centralized web app(s) required for key MIS components and UI</p>
+            <p>An existing monolithic web application to be migrated to the AWS platform</p>
+            <p>A Business Intelligence pipepline is needed to ingest, store and report on the BPO client projects</p>
             <br />
 
             <i
@@ -117,7 +121,7 @@
             <i
               ><small><b>Result</b></small></i
             >
-            <p>TODO</p>
+            <p>Devsecops, enhance security posture</p>
           </div>
         </div>
         <div class="panel panel-default">
